--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -200,53 +200,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class fasion_mnist_alexnet(nn.Module):  \n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.conv1 = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels=1, out_channels=96, kernel_size=11, stride=4, padding=0),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2)\n",
-    "        )\n",
-    "        self.conv2 = nn.Sequential(\n",
-    "            nn.Conv2d(96, 256, 5, 1, 2),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(3, 2)\n",
-    "        )\n",
-    "        self.conv3 = nn.Sequential(\n",
-    "            nn.Conv2d(256, 384, 3, 1, 1),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
-    "        self.conv4 = nn.Sequential(\n",
-    "            nn.Conv2d(384, 384, 3, 1, 1),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
-    "        self.conv5 = nn.Sequential(\n",
-    "            nn.Conv2d(384, 256, 3, 1, 1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(3, 2)\n",
-    "        )\n",
+    "# class fasion_mnist_alexnet(nn.Module):  \n",
+    "#     def __init__(self):\n",
+    "#         super().__init__()\n",
+    "#         self.conv1 = nn.Sequential(\n",
+    "#             nn.Conv2d(in_channels=1, out_channels=96, kernel_size=11, stride=4, padding=0),\n",
+    "#             nn.ReLU(),\n",
+    "#             nn.MaxPool2d(kernel_size=3, stride=2)\n",
+    "#         )\n",
+    "#         self.conv2 = nn.Sequential(\n",
+    "#             nn.Conv2d(96, 256, 5, 1, 2),\n",
+    "#             nn.ReLU(),\n",
+    "#             nn.MaxPool2d(3, 2)\n",
+    "#         )\n",
+    "#         self.conv3 = nn.Sequential(\n",
+    "#             nn.Conv2d(256, 384, 3, 1, 1),\n",
+    "#             nn.ReLU()\n",
+    "#         )\n",
+    "#         self.conv4 = nn.Sequential(\n",
+    "#             nn.Conv2d(384, 384, 3, 1, 1),\n",
+    "#             nn.ReLU()\n",
+    "#         )\n",
+    "#         self.conv5 = nn.Sequential(\n",
+    "#             nn.Conv2d(384, 256, 3, 1, 1),\n",
+    "#             nn.ReLU(),\n",
+    "#             nn.MaxPool2d(3, 2)\n",
+    "#         )\n",
     "\n",
-    "        self.fc1 = nn.Linear(256 * 6 * 6, 4096)\n",
-    "        self.fc2 = nn.Linear(4096, 4096)\n",
-    "        self.fc3 = nn.Linear(4096, 10)\n",
+    "#         self.fc1 = nn.Linear(256 * 6 * 6, 4096)\n",
+    "#         self.fc2 = nn.Linear(4096, 4096)\n",
+    "#         self.fc3 = nn.Linear(4096, 10)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        out = self.conv1(x)\n",
-    "        out = self.conv2(out)\n",
-    "        out = self.conv3(out)\n",
-    "        out = self.conv4(out)\n",
-    "        out = self.conv5(out)\n",
-    "        out = out.view(out.size(0), -1)\n",
+    "#     def forward(self, x):\n",
+    "#         out = self.conv1(x)\n",
+    "#         out = self.conv2(out)\n",
+    "#         out = self.conv3(out)\n",
+    "#         out = self.conv4(out)\n",
+    "#         out = self.conv5(out)\n",
+    "#         out = out.view(out.size(0), -1)\n",
     "\n",
-    "        out = F.relu(self.fc1(out))  # 256*6*6 -> 4096\n",
-    "        out = F.dropout(out, 0.5)\n",
-    "        out = F.relu(self.fc2(out))\n",
-    "        out = F.dropout(out, 0.5)\n",
-    "        out = self.fc3(out)\n",
-    "        out = F.log_softmax(out, dim=1)\n",
+    "#         out = F.relu(self.fc1(out))  # 256*6*6 -> 4096\n",
+    "#         out = F.dropout(out, 0.5)\n",
+    "#         out = F.relu(self.fc2(out))\n",
+    "#         out = F.dropout(out, 0.5)\n",
+    "#         out = self.fc3(out)\n",
+    "#         out = F.log_softmax(out, dim=1)\n",
     "\n",
-    "        return out\n"
+    "#         return out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VGG(nn.Module):\n",
+    "  def __init__(self, features:nn.Module, num_classes:int=1000, init_weights:bool=True):\n",
+    "      super(VGG, self).__init__()\n",
+    "      self.features = features #features = Feature extraction\n",
+    "      self.avgpool = nn.AdaptiveAvgPool2d((1,1))\n",
+    "      self.classifier = nn.Sequential(\n",
+    "          nn.Linear(1024, 1024),\n",
+    "          nn.ReLU(),\n",
+    "          nn.Dropout(0.5),\n",
+    "          nn.Linear(1024, 512),\n",
+    "          nn.ReLU(),\n",
+    "          nn.Dropout(0.3),\n",
+    "          nn.Linear(512, 512),\n",
+    "          nn.ReLU(),\n",
+    "          nn.Linear(512, num_classes)\n",
+    "          )\n",
+    "\n",
+    "      if init_weights:\n",
+    "        self.initialize_weights()\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    x = self.features(x) #features = Feature extraction\n",
+    "    x = self.avgpool(x)\n",
+    "    # print(x.shape)\n",
+    "    x = torch.flatten(x, 1)\n",
+    "    x = self.classifier(x)\n",
+    "    return x\n",
+    "\n",
+    "  def initialize_weights(self):\n",
+    "    for m in self.modules():\n",
+    "      if isinstance(m, nn.Conv2d):\n",
+    "        nn.init.kaiming_normal_(m.weight, mode='fan_in', nonlinearity='leaky_relu')\n",
+    "        if m.bias is not None:\n",
+    "          nn.init.constant_(m.bias, 0)\n",
+    "      if isinstance(m, nn.BatchNorm2d):\n",
+    "        nn.init.constant_(m.weight, 1)\n",
+    "        nn.init.constant_(m.bias, 0)\n",
+    "      if isinstance(m, nn.Linear):\n",
+    "        nn.init.kaiming_normal_(m.weight, mode='fan_in', nonlinearity='leaky_relu')\n",
+    "        if m.bias is not None:\n",
+    "          nn.init.constant_(m.bias, 0)\n",
+    "\n",
+    "cfgs: Dict[str, List[Union[int, str]]] = {\n",
+    "    'A': [64, 'M', 128, 128, 'M', 256, 256, 256, 'M', 512, 512, 512, 'M', 1024, 1024, 1024, 'M'],\n",
+    "    'B': [64, 'M', 128, 'M', 256, 'M', 512, 'M', 1024, 'M'],\n",
+    "    'firstPadding':2\n",
+    "}\n",
+    "\n",
+    "def make_layers(cfg:List[Union[int,str]], batch_norm:bool=False) -> nn.Sequential:\n",
+    "  layers:List[nn.Module] = []\n",
+    "  in_channels = 3\n",
+    "  in_padding = 5\n",
+    "  i = 0\n",
+    "  for v in cfg:\n",
+    "    if v == 'M':\n",
+    "      layers += [nn.MaxPool2d(kernel_size=2, stride=2)]\n",
+    "    else:\n",
+    "      v = cast(int, v)\n",
+    "      in_padding = 1\n",
+    "      if i == 5:\n",
+    "        in_padding = 2\n",
+    "      conv2d = nn.Conv2d(in_channels, v, kernel_size=3, padding=in_padding)\n",
+    "      if batch_norm:\n",
+    "        layers += [conv2d, nn.BatchNorm2d(v), nn.PReLU(num_parameters=1)]\n",
+    "      else:\n",
+    "        layers += [conv2d, nn.PReLU(num_parameters=1)] #nn.PReLU(num_parameters=1) nn.ReLU(inplace=True)\n",
+    "      in_channels = v\n",
+    "    i += 1\n",
+    "  return nn.Sequential(*layers)\n",
+    "\n",
+    "\n",
+    "def selfDefineVgg(arch, cfg, batch_norm,  num_classes:int, **kwargs: Any) -> VGG:\n",
+    "    model = VGG(make_layers(arch[cfg], batch_norm=batch_norm), num_classes, **kwargs)\n",
+    "    return model\n",
+    "model = selfDefineVgg(cfgs, 'A', True, 11)\n",
+    "model = model.to(device)"
    ]
   },
   {
